# amplifier-module-style-extraction

./: HOW_THIS_MODULE_WAS_MADE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/amplifier_module_style_extraction/: __init__.py  extractor.py  models.py
tests/: test_models.py
